# basisu_rs

./: Cargo.toml  LICENSE-MIT.txt  README.md
.github/workflows/: ci.yml
benches/: benchmark.rs
src/: UASTC Modes.txt  astc.rs  basis.rs  bc7.rs  bitreader.rs  bitwriter.rs  bytereader.rs  color.rs  etc.rs  etc1s.rs  huffman.rs  lib.rs  uastc.rs
src/basis_lz/: huffman.rs  mod.rs
src/target_formats/: astc.rs  bc7.rs  etc.rs  mod.rs
src/uastc/: mod.rs  tests_to_astc.rs  tests_to_bc7.rs  tests_to_etc1.rs  tests_to_etc2.rs  tests_to_rgba.rs
tests/: common.rs  corpus_tests.rs  integration_tests.rs  test_block_export.rs  transcode_uastc_block.rs
tests/block_test_cases/: mod.rs  uastc_astc.rs  uastc_bc7.rs  uastc_etc1.rs  uastc_etc2.rs  uastc_rgba.rs
tests/no_std/: Cargo.toml  test.rs
