[package]
name = "basisu"
description = "Basis Universal decoder"
repository = "https://github.com/JakubValtar/basisu_rs"
version = "0.1.0"
authors = ["Jakub Valtar <jakub.valtar@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/JakubValtar/basisu_rs"
readme = "README.md"

[dependencies]
byteorder = "1.3.4"

[dev-dependencies]
png = "0.17"
ktx = "0.3.1"
