[package]
name = "basisu"
description = "Basis Universal decoder"
repository = "https://github.com/JakubValtar/basisu_rs"
version = "0.1.0"
authors = ["Jakub Valtar <jakub.valtar@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/JakubValtar/basisu_rs"
readme = "README.md"

[profile.test]
opt-level = 3

[dependencies]
byteorder = "1.3.4"

[dev-dependencies]
png = "0.17"
ktx = "0.3.1"
proptest = "1"
basis-universal = { git = "https://github.com/JakubValtar/basis-universal-rs.git", rev = "31bca74791b72bbaa7ac98fb6bfbeb96faf86185" }

[features]
default = ["std"]
std = []

[workspace]
members = ["tests/no_std"]
